--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-minecraft/
-build/
-out/
-.gradle/
-.idea/
-*.iml
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
 *.ipr
 *.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+minecraft
