--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,15 @@ repositories {
 		name = "mcmoddev"
 		url = "http://maven.mcmoddev.com"
 	}
+    maven {
+        url = "http://dvs1.progwml6.com/files/maven"
+    }
 }
 
 dependencies {
     compile "net.ilexiconn:llibrary:$llibrary_version-1.11.2:dev"
+    deobfCompile "mezz.jei:jei_1.11.2:4.3.1.260:api"
+    runtime "mezz.jei:jei_1.11.2:4.3.1.260"
 }
 
 processResources {
